# trustbit_barcode

./: README.md  pyproject.toml  requirements.txt  setup.py
trustbit_barcode/: api.py  hooks.py  install.py
trustbit_barcode/public/: bundle.json
trustbit_barcode/public/js/: barcode_print.js  qz-tray.js
trustbit_barcode/trustbit_barcode/doctype/barcode_label_size/: barcode_label_size.json  barcode_label_size.py
trustbit_barcode/trustbit_barcode/doctype/barcode_print_settings/: barcode_print_settings.json  barcode_print_settings.py
