[project]
name = "trustbit_barcode"
authors = [
    { name = "Trustbit", email = "ra.pandey008@gmail.com"}
]
description = "Direct thermal barcode label printing from ERPNext with QZ Tray"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "trustbit_barcode"
